--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,18 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body class="container">
-    <h2> hello world </h2>
-    <%= yield %>
+  <body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <%= render 'shared/nav' %>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
+
   </body>
 </html>
+
+
