--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,4 +14,7 @@
    <td>
     <%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" %>
   </td>
+  <td>
+    <%= link_to '', post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", class: 'glyphicon glyphicon-trash index-icons', data: { confirm: 'Are you sure?' } %>
+  </td>
 <tr>
