--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "posts.scss";
+ @import "gritter";
 
  .custom-nav {
   margin-top: 15px;
