--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     </div>
   </div>
 
+  <%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false, image: :notice) %>
+
   </body>
 </html>
 
