--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -12,6 +12,9 @@
     <%= truncate(post.description) %>
   </td>
    <td>
+    <%= post.status %>
+  </td>
+   <td>
     <%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" %>
   </td>
   <td>
