--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -12,12 +12,12 @@
     <%= truncate(post.description) %>
   </td>
    <td>
-    <%= post.status %>
+    <%= status_label post.status %>
   </td>
    <td>
     <%= link_to 'Edit', edit_post_path(post), id: "edit_#{post.id}" %>
   </td>
   <td>
-    <%= link_to '', post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", class: 'glyphicon glyphicon-trash index-icons', data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'delete', post_path(post), method: :delete, id: "delete_post_#{post.id}_from_index", class: 'glyphicon glyphicon-trash index-icons', data: { confirm: 'Are you sure?' } %>
   </td>
 <tr>
