Styled show page and add edit button

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -12,7 +12,7 @@
     <%= post.user.full_name %>
   </td>
   <td>
-    <%= truncate(post.description) %>
+    <%= link_to truncate(post.description), post %>
   </td>
    <td>
     <%= status_label post.status %>
