--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
     <h3><span>Current Stage of Approval:</span> <%= @post.status %></h3>
   </div>
 </div>
-<%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-primary' if policy(@post).update? %>
+<%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-primary_' if policy(@post).update? %>
 
 
 
