--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -1,2 +1,30 @@
-<%= render @audit_logs %>
+<h1>Audit Log Dashboard</h1>
+
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>
+        #
+      </th>
+      <th>
+        Employee
+      </th>
+      <th>
+        Work Starting
+      </th>
+      <th>
+        Confirmed At
+      </th>
+      <th>
+        Status
+      </th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= render @audit_logs %> %>
+  </tbody>
+</table>
+
 
