--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
  @import "gritter";
  @import "bourbon";
  @import "admin_homepage";
+ @import "employee_homepage";
 
  .custom-nav {
   margin-top: 15px;
