--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,1 +1,12 @@
-<h1>employee.html.erb</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class='well employee-blocks'>
+      <h3>Pending Your Confirmation</h3>
+
+      <%= render partial: 'pending_audit_confirmations', locals: { pending_audit_confirmations: @pending_audit_confirmations } %>
+
+      <div class='col-md-5 column well employee-blocks'>
+        asdf
+    </div>
+  </div>
+</div>
