--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,15 +3,12 @@
     <%= post.overtime_request %>
   </td>
   <td>
-    <%= post.id %>
-  </td>
-  <td>
     <%= post.date %>
   </td>
   <td>
     <%= post.user.full_name %>
   </td>
-  <td>
+  <td class="hidden-xs">
     <%= link_to truncate(post.description), post %>
   </td>
    <td>
