--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,9 +4,6 @@
   <thead>
     <tr>
       <th>
-        #
-      </th>
-      <th>
         Overtime requested
       </th>
       <th>
@@ -15,7 +12,7 @@
       <th>
         User
       </th>
-      <th>
+      <th class="hidden-xs">
         Description
       </th>
       <th>
