--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
         User
       </th>
       <th class="hidden-xs">
-        Description
+        Work Performed
       </th>
       <th>
         Status
